# projekt_eter

./: .gitignore  LICENSE  README.md
esp32/station/: README.md  sdkconfig
esp32/station/main/: CMakeLists.txt  station_example_main.c
server/: compose.yaml  schema.sql
server/metrictest/: go.mod  main.go
server/metricwriter/: Dockerfile  go.mod  main.go
